@@ -215,6 +215,7 @@ tweak civ-view-agreement
 tweak eggs-fertile
 tweak fps-min
 tweak hide-priority
+tweak kitchen-prefs-all
 tweak kitchen-prefs-empty
 tweak max-wheelbarrow
 tweak shift-8-scroll
