@@ -94,6 +94,7 @@
 #include "tweaks/hide-priority.h"
 #include "tweaks/hotkey-clear.h"
 #include "tweaks/import-priority-category.h"
+#include "tweaks/kitchen-prefs-all.h"
 #include "tweaks/kitchen-prefs-color.h"
 #include "tweaks/kitchen-prefs-empty.h"
 #include "tweaks/max-wheelbarrow.h"
@@ -219,6 +220,9 @@ DFhackCExport command_result plugin_init (color_ostream &out, std::vector <Plugi
         "  tweak import-priority-category [disable]\n"
         "    When meeting with a liaison, makes Shift+Left/Right arrow adjust\n"
         "    the priority of an entire category of imports.\n"
+        "  tweak kitchen-prefs-all [disable]\n"
+        "    Adds an option to toggle cook/brew for all visible items in\n"
+        "    kitchen preferences\n"
         "  tweak kitchen-prefs-color [disable]\n"
         "    Changes color of enabled items to green in kitchen preferences\n"
         "  tweak kitchen-prefs-empty [disable]\n"
@@ -296,6 +300,9 @@ DFhackCExport command_result plugin_init (color_ostream &out, std::vector <Plugi
 
     TWEAK_HOOK("import-priority-category", takerequest_hook, feed);
     TWEAK_HOOK("import-priority-category", takerequest_hook, render);
+
+    TWEAK_HOOK("kitchen-prefs-all", kitchen_prefs_all_hook, feed);
+    TWEAK_HOOK("kitchen-prefs-all", kitchen_prefs_all_hook, render);
 
     TWEAK_HOOK("kitchen-prefs-color", kitchen_prefs_color_hook, render);
 
